--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   cupertino_icons: ^0.1.0
   http: 0.12.0+3
   test: 1.9.4
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.9
+  firebase_auth: ^0.15.3
 
 dev_dependencies:
   flutter_test:
