--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.9
   firebase_auth: ^0.15.3
+  cloud_firestore: ^0.12.9+5
+  provider: ^3.1.0
 
 dev_dependencies:
   flutter_test:
