--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.12.9+5
   provider: ^3.1.0
+  google_sign_in: 4.1.1
 
 dev_dependencies:
   flutter_test:
